--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,7 @@
 1.0.0.2 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Last release was a brown bag release.
 
 
 1.0.0.1 (2013-07-22)
